versioned_docs/version-2.15/reference/targets/pyoxidizer_binary.mdx
---
title: pyoxidizer_binary
# The old-style `code...code` anchors are heading level 6, and shouldn't be visible in ToC
toc_max_heading_level: 5
---

import Field from "@site/src/components/reference/Field";
import styles from "@site/src/components/reference/styles.module.css";

---

A single-file Python executable with a Python interpreter embedded, built via PyOxidizer.

To use this target, first create a `python_distribution` target with the code you want included in your binary, per https://www.pantsbuild.org/v2.15/docs/python-distributions. Then add this `python_distribution` target to the `dependencies` field. See the `help` for `dependencies` for more information.

You may optionally want to set the `entry_point` field. For advanced use cases, you can use a custom PyOxidizer config file, rather than what Pants generates, by setting the `template` field. You may also want to set `[pyoxidizer].args` to a value like `['--release']`.

Backend: <span className="color--primary">`pants.backend.experimental.python.packaging.pyoxidizer`</span>

---

<span className={styles.options}>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codetagscode}
</div>

## `tags`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Arbitrary strings to describe a target.

For example, you may tag some test targets with &#x27;integration_test&#x27; so that you could run `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 --tag='integration_test' test ::` to only run on targets with that tag.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codedescriptioncode}
</div>

## `description`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

A human-readable description of the target.

Use `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 list --documented ::` to see all targets with descriptions.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeoutput_pathcode}
</div>

## `output_path`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

Where the built directory tree should be located.

If undefined, this will use the path to the BUILD file, followed by the target name. For example, `src/python/project:bin` would be `src.python.project/bin/`.

Regardless of whether you use the default or set this field, the path will end with PyOxidizer&#x27;s file format of `<platform>/{debug,release}/install/<binary_name>`, where `platform` is a Rust platform triplet like `aarch-64-apple-darwin` and `binary_name` is the value of the `binary_name` field. So, using the default for this field, the target `src/python/project:bin` might have a final path like `src.python.project/bin/aarch-64-apple-darwin/release/bin`.

When running `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 package`, this path will be prefixed by `--distdir` (e.g. `dist/`).

Warning: setting this value risks naming collisions with other package targets you may have.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codebinary_namecode}
</div>

## `binary_name`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

The name of the binary that will be output by PyOxidizer. If not set, this will default to the name of this target.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codetemplatecode}
</div>

## `template`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

If set, will use your custom configuration rather than using Pants&#x27;s default template.

The path is relative to the BUILD file&#x27;s directory, and it must end in `.blzt`.

All parameters must be prefixed by $ or surrounded with $&#123; &#125;.

Available template parameters:

- RUN_MODULE - The re-formatted entry_point passed to this target (or None).
- NAME - This target&#x27;s name.
- WHEELS - All python distributions passed to this target (or []).
- UNCLASSIFIED_RESOURCE_INSTALLATION - This will populate a snippet of code to correctly inject the targets filesystem_resources.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codedependenciescode}
</div>

## `dependencies`

<Field
    type_repr={`Iterable[str]`}
    default_repr={`None`}
>

The addresses of `python_distribution` target(s) to include in the binary, e.g. `['src/python/project:dist']`.

The distribution(s) must generate at least one wheel file. For example, if using `generate_setup=True`, then make sure `wheel=True`. See https://www.pantsbuild.org/v2.15/docs/python-distributions.

Usually, you only need to specify a single `python_distribution`. However, if that distribution depends on another first-party distribution in your repository, you must specify that dependency too, otherwise PyOxidizer would try installing the distribution from PyPI. Note that a `python_distribution` target might depend on another `python_distribution` target even if it is not included in its own `dependencies` field, as explained at https://www.pantsbuild.org/v2.15/docs/python-distributions; if code from one distribution imports code from another distribution, then there is a dependency and you must include both `python_distribution` targets in the `dependencies` field of this `pyoxidizer_binary` target.

Target types other than `python_distribution` will be ignored.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeentry_pointcode}
</div>

## `entry_point`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

Set the entry point, i.e. what gets run when executing `./my_app`, to a module. This represents the content of PyOxidizer&#x27;s `python_config.run_module` and leaving this field empty will create a REPL binary.

It is specified with the full module declared: &#x27;path.to.module&#x27;.

This field is passed into the PyOxidizer config as-is, and does not undergo validation checking.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codefilesystem_resourcescode}
</div>

## `filesystem_resources`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Adds support for listing dependencies that MUST be installed to the filesystem (e.g. Numpy). See https://pyoxidizer.readthedocs.io/en/stable/pyoxidizer_packaging_additional_files.html#installing-unclassified-files-on-the-filesystem

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeenvironmentcode}
</div>

## `environment`

<Field
    type_repr={`str | None`}
    default_repr={`'__local__'`}
>

Specify which environment target to consume environment-sensitive options from.

Once environments are defined in `[environments-preview].names`, you can specify the environment for this target by its name. Any fields that are defined in that environment will override the values from options set by `pants.toml`, command line values, or environment variables.

You can specify multiple valid environments by using `parametrize`. If `__local__` is specified, Pants will fall back to the `local_environment` defined for the current platform, or no environment if no such environment exists.

</Field>

</span>
